
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int value; } ;
typedef TYPE_1__ X509_NAME_ENTRY ;
typedef int X509_NAME ;
typedef int ASN1_OBJECT ;


 int ASN1_mbstring_ncopy (int *,unsigned char*,int,int ,int ,int ,int ) ;
 int MBSTRING_ASC ;
 int * OBJ_txt2obj (char*,int ) ;
 TYPE_1__* X509_NAME_ENTRY_new () ;
 int X509_NAME_ENTRY_set_object (TYPE_1__*,int *) ;
 int X509_NAME_add_entry (int *,TYPE_1__*,int,int ) ;

void DUF_add_entry(X509_NAME **subiss, char *field,
   unsigned char *bytes, int len)
{
 ASN1_OBJECT *obj;
 X509_NAME_ENTRY *ne;

 ne=X509_NAME_ENTRY_new();
 obj=OBJ_txt2obj(field,0);
 X509_NAME_ENTRY_set_object(ne,obj);
 ASN1_mbstring_ncopy(&ne->value,bytes,len,MBSTRING_ASC,0,0,0);
 X509_NAME_add_entry(*subiss,ne,-1,0);
}
