; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4312.c_DUF_add_entry.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4312.c_DUF_add_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@MBSTRING_ASC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DUF_add_entry(i32** %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_5__*, align 8
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = call %struct.TYPE_5__* (...) @X509_NAME_ENTRY_new()
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32* @OBJ_txt2obj(i8* %12, i32 0)
  store i32* %13, i32** %9, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @X509_NAME_ENTRY_set_object(%struct.TYPE_5__* %14, i32* %15)
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i8*, i8** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* @MBSTRING_ASC, align 4
  %22 = call i32 @ASN1_mbstring_ncopy(i32* %18, i8* %19, i32 %20, i32 %21, i32 0, i32 0, i32 0)
  %23 = load i32**, i32*** %5, align 8
  %24 = load i32*, i32** %23, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %26 = call i32 @X509_NAME_add_entry(i32* %24, %struct.TYPE_5__* %25, i32 -1, i32 0)
  ret void
}

declare dso_local %struct.TYPE_5__* @X509_NAME_ENTRY_new(...) #1

declare dso_local i32* @OBJ_txt2obj(i8*, i32) #1

declare dso_local i32 @X509_NAME_ENTRY_set_object(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @ASN1_mbstring_ncopy(i32*, i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @X509_NAME_add_entry(i32*, %struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
